default/objects/E2E_Docusign_Settings__c/E2E_Docusign_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>E2E Docusign Settings</label>
</CustomObject>