default/objects/E2E_Docusign_Settings__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <label>AccountId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>