default/objects/E2E_Docusign_Settings__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Body</label>
    <length>255</length>
    <type>Text</type>
</CustomField>