default/objects/E2E_Docusign_Settings__c/fields/IntegratorsKeyDesktop__c.field-meta.xml
<CustomField>
    <fullName>IntegratorsKeyDesktop__c</fullName>
    <label>IntegratorsKeyDesktop</label>
    <length>128</length>
    <type>Text</type>
</CustomField>