default/objects/E2E_Docusign_Settings__c/fields/IntegratorsKeyMob__c.field-meta.xml
<CustomField>
    <fullName>IntegratorsKeyMob__c</fullName>
    <label>IntegratorsKeyMob</label>
    <length>128</length>
    <type>Text</type>
</CustomField>