default/objects/E2E_Docusign_Settings__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Password</label>
    <length>25</length>
    <type>Text</type>
</CustomField>