default/objects/E2E_Docusign_Settings__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <length>128</length>
    <type>Text</type>
</CustomField>