default/objects/E2E_Docusign_Settings__c/fields/WebServiceUrl__c.field-meta.xml
<CustomField>
    <fullName>WebServiceUrl__c</fullName>
    <label>WebServiceUrl</label>
    <length>128</length>
    <type>Text</type>
</CustomField>